--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@vueuse/core": "^10.6.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "pdfjs-dist": "^4.3.136",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
