--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.6.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "mammoth": "^1.8.0",
+    "pdfjs-dist": "^4.3.136",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
-    "pdfjs-dist": "^4.3.136",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
